Bug 148812 - [FILEOPEN] [FILESAVE] XLS -> XLSX bad translation of defined names
Summary: [FILEOPEN] [FILESAVE] XLS -> XLSX bad translation of defined names
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.3.2.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0
Keywords: filter:xls, filter:xlsx
Depends on:
Blocks: XLSX-Corrupted
  Show dependency treegraph
 
Reported: 2022-04-26 21:34 UTC by SheetJS
Modified: 2025-04-14 11:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
specimen (5.50 KB, application/vnd.ms-excel)
2022-04-26 21:34 UTC, SheetJS
Details

Note You need to log in before you can comment on or make changes to this bug.
Description SheetJS 2022-04-26 21:34:05 UTC
Description:
LO can read files with "\x2e" (".") in defined names from an XLS file.  When saving the files to XLSX, those characters are replaced with "\x5f" ("_").  It may be an issue with the XLS import filter or the XLSX export filter.  Since the test files were generated using LibreOffice save as XLS, the XLS export filter does not exhibit the issue.

Steps to Reproduce:
Open attachment and save as XLSX, then try opening the file in Excel

Actual Results:
File opens

Expected Results:
Excel reports file is invalid


Reproducible: Always


User Profile Reset: Yes



Additional Info:
The XLS file has the correct defined name:

```js
> require("xlsx").readFile("locrash.xls")?.Workbook?.Names?.map(x => x.Name)
[ '_xlfn.UNICHAR' ]
```

The generated XLSX does not:

```js
> require("xlsx").readFile("locrash.xlsx")?.Workbook?.Names?.map(x => x.Name)
[ '_xlfn_UNICHAR' ]
```

(note that the "." was replaced with "_")
Comment 1 SheetJS 2022-04-26 21:34:42 UTC
Created attachment 179795 [details]
specimen
Comment 2 Buovjaga 2023-01-31 12:46:16 UTC
I guess I repro as office.com says:
Removed Records: Named range from /xl/workbook.xml part (Workbook)

Arch Linux 64-bit, X11
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a345952daf3238066ecb1a9c67bb6a3640a6299a
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 31 January 2023
Comment 3 Aron Budea 2025-01-04 08:25:22 UTC
It is not the "." => "_" replacement that is the problem, though, because Excel still complains after adjusting the definedName element in xl\workbook.xml from "_xlfn_UNICHAR" to "_xlfn.UNICHAR", and rezipping the XMLs. For XLSX, Excel doesn't add such names, either, they're purely for XLS.
Comment 4 Commit Notification 2025-01-17 03:49:58 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1f7a4ef133542b19d5093fe8e02eb366a7888fd7

tdf#148812 write #NAME? for an empty definedName value

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Buovjaga 2025-02-04 13:49:43 UTC
Can this be closed as fixed?
Comment 6 Aron Budea 2025-04-14 11:21:16 UTC
Yes, let's close. Thanks for the fix, Tomaž!