tdf#148812 write #NAME? for an empty definedName value

This keeps MSOffice silent when opening the documents that don't
have the any range/formula expression set for the define name.

Change-Id: Ib4cc01a5c51b3875c0d8e0870e2bdf9c15794df1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180258
Tested-by: Jenkins
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>