sc/source/filter/excel/xename.cxx
@@ -322,6 +322,8 @@ OUString XclExpName::GetWithDefaultRangeSeparator( const OUString& rSymbol ) con
             }
         }
     }
+    if (rSymbol.isEmpty())
+        return u"#NAME?"_ustr;
     return rSymbol;
 }
 
